--- a/css/style.css
+++ b/css/style.css
@@ -1,121 +1,130 @@
 /*Colors*/
 /* Small devices (tablets, 768px and up) */
-@media (max-width: 767px) { /* line 13, ../sass/style.scss */
+@media (max-width: 767px) { /* line 14, ../sass/style.scss */
   .sidebar { padding-top: 30px; }
-  /* line 16, ../sass/style.scss */
+  /* line 17, ../sass/style.scss */
   .mainContent { max-width: 767px; } }
 /* Medium devices (desktops, 992px and up) */
-@media (min-width: 980px) { /* line 23, ../sass/style.scss */
+@media (min-width: 980px) { /* line 24, ../sass/style.scss */
   body { padding-top: 60px; padding-bottom: 40px; }
-  /* line 27, ../sass/style.scss */
+  /* line 28, ../sass/style.scss */
   .mainContent { max-width: 980px; } }
 /* Large devices (large desktops, 1200px and up) */
-@media (min-width: 1200px) { /* line 34, ../sass/style.scss */
+@media (min-width: 1200px) { /* line 35, ../sass/style.scss */
   .mainContent { max-width: 1280px; } }
 /*General styles*/
-/* line 43, ../sass/style.scss */
+/* line 44, ../sass/style.scss */
 h1, h2, h3, h4, h5, h6, p, a { font-family: 'Gotham A', 'Gotham B'; color: #393b3d; }
 
-/* line 48, ../sass/style.scss */
+/* line 49, ../sass/style.scss */
 h4 { font-size: 17px; }
 
-/* line 52, ../sass/style.scss */
+/* line 53, ../sass/style.scss */
 a, a:hover, a:focus { outline: none; }
 
-/* line 56, ../sass/style.scss */
+/* line 57, ../sass/style.scss */
+a:hover { color: black; }
+
+/* line 61, ../sass/style.scss */
 h4 small { display: block; font-size: 60%; color: #888; }
 
-/* line 62, ../sass/style.scss */
+/* line 67, ../sass/style.scss */
 footer.container, .container { width: 100%; }
 
-/* line 67, ../sass/style.scss */
+/* line 72, ../sass/style.scss */
 .mainContent { margin: 0 auto; }
-/* line 70, ../sass/style.scss */
+/* line 75, ../sass/style.scss */
 .mainContent h2 { text-align: center; margin: 0 auto; padding-top: 87px; text-transform: uppercase; font-size: 42px; }
-/* line 80, ../sass/style.scss */
+/* line 85, ../sass/style.scss */
 .mainContent .row-fluid .subtext { font-size: 19px; margin: 0 auto; padding: 30px 0; text-align: center; width: 100%; }
-/* line 88, ../sass/style.scss */
+/* line 93, ../sass/style.scss */
 .mainContent .row-fluid .col1, .mainContent .row-fluid .col2, .mainContent .row-fluid .col3 { padding: 120px 20px 20px; background: url("/images/about-bg-0.png") no-repeat top center; margin: 80px 0; text-align: center; text-justify: inter-word; }
-/* line 96, ../sass/style.scss */
+/* line 101, ../sass/style.scss */
 .mainContent .row-fluid .col2 { background: url("/images/about-bg-1.png") no-repeat top center; }
-/* line 100, ../sass/style.scss */
+/* line 105, ../sass/style.scss */
 .mainContent .row-fluid .col3 { background: url("/images/about-bg-2.png") no-repeat top center; }
+/* line 109, ../sass/style.scss */
+.mainContent .row-fluid .col1.help { background: url("/images/help-bg-1.png") no-repeat top center; }
+/* line 113, ../sass/style.scss */
+.mainContent .row-fluid .col2.help { background: url("/images/help-bg-2.png") no-repeat top center; }
+/* line 117, ../sass/style.scss */
+.mainContent .row-fluid .col3.help { background: url("/images/help-bg-3.png") no-repeat top center; }
 
-/* line 110, ../sass/style.scss */
+/* line 125, ../sass/style.scss */
 footer.container { margin-top: 30px; padding: 30px 0; border-top: 1px dashed #aaa; }
 
 /*Header and navbar*/
-/* line 118, ../sass/style.scss */
+/* line 133, ../sass/style.scss */
 .navbar .container-fluid { padding: 0px; margin: 0px; }
 
-/* line 123, ../sass/style.scss */
+/* line 138, ../sass/style.scss */
 .navbar .brand { padding: 0px; margin: 0px; width: 90px; height: 90px; }
 
-/* line 131, ../sass/style.scss */
+/* line 146, ../sass/style.scss */
 .navbar-inverse .navbar-inner { background: #f5f5f5; height: 90px; border: none; }
-/* line 137, ../sass/style.scss */
-.navbar-inverse .navbar-inner .nav-collapse.collapse { float: right; max-width: 950px; }
-/* line 142, ../sass/style.scss */
-.navbar-inverse .navbar-inner .lang { float: right; width: 46px; list-style: none; margin: 0px; padding: 0px; position: relative; right: 14px; }
 /* line 152, ../sass/style.scss */
-.navbar-inverse .navbar-inner .lang > li > a { color: #ff7c18; }
+.navbar-inverse .navbar-inner .nav-collapse.collapse { float: right; max-width: 950px; }
 /* line 157, ../sass/style.scss */
+.navbar-inverse .navbar-inner .lang { float: right; width: 46px; list-style: none; margin: 0px; padding: 0px; position: relative; right: 14px; }
+/* line 167, ../sass/style.scss */
+.navbar-inverse .navbar-inner .lang > li > a { color: #ff7c18; }
+/* line 172, ../sass/style.scss */
 .navbar-inverse .navbar-inner .social-icon { float: right; width: 120px; list-style: none; margin: 0px; padding: 16px 0px; }
-/* line 166, ../sass/style.scss */
-.navbar-inverse .navbar-inner .social-icon > li { width: 40px; margin: 0px; padding: 0px; overflow: hidden; float: left; display: block; height: 44px; background: url("/images/social-icon.png") no-repeat scroll; }
-/* line 177, ../sass/style.scss */
-.navbar-inverse .navbar-inner .social-icon > li.facebook { background-position: -91px -4px; }
 /* line 181, ../sass/style.scss */
+.navbar-inverse .navbar-inner .social-icon > li { width: 40px; margin: 0px; padding: 0px; overflow: hidden; float: left; display: block; height: 44px; background: url("/images/social-icon.png") no-repeat scroll; }
+/* line 192, ../sass/style.scss */
+.navbar-inverse .navbar-inner .social-icon > li.facebook { background-position: -91px -4px; }
+/* line 196, ../sass/style.scss */
 .navbar-inverse .navbar-inner .social-icon > li.twitter { background-position: -1px -4px; }
-/* line 185, ../sass/style.scss */
+/* line 200, ../sass/style.scss */
 .navbar-inverse .navbar-inner .social-icon > li.google { background-position: -45px -4px; }
-/* line 189, ../sass/style.scss */
+/* line 204, ../sass/style.scss */
 .navbar-inverse .navbar-inner .social-icon > li > a { width: 40px; height: 40px; margin: 0px; padding: 24px 11px; color: transparent; font-size: 3px; overflow: hidden; }
-/* line 198, ../sass/style.scss */
+/* line 213, ../sass/style.scss */
 .navbar-inverse .navbar-inner .btn-navbar { background: url(/images/menu.png); height: 88px; width: 88px; float: right; margin: 0px; padding: 0px; border: none; }
-/* line 208, ../sass/style.scss */
+/* line 223, ../sass/style.scss */
 .navbar-inverse .brand, .navbar-inverse .nav { margin: 0px; padding: 0px; }
 
-/* line 215, ../sass/style.scss */
+/* line 230, ../sass/style.scss */
 .lang > li, .social-icon > li, .navbar-inverse .nav > li { margin-top: 35px; }
 
-/* line 220, ../sass/style.scss */
+/* line 235, ../sass/style.scss */
 .lang > li > a, .social-icon > li > a, .navbar-inverse .nav > li > a { color: #473934; text-transform: uppercase; padding: 0 15px; font-weight: bold; }
 
-/* line 229, ../sass/style.scss */
+/* line 244, ../sass/style.scss */
 html, body { height: 100%; }
 
-/* line 233, ../sass/style.scss */
+/* line 248, ../sass/style.scss */
 .wrapper { min-height: 100%; height: auto !important; /* This line and the next line are not necessary unless you need IE6 support */ height: 100%; margin: 0 auto -155px; /* the bottom margin is the negative value of the footer's height */ }
 
-/* line 240, ../sass/style.scss */
+/* line 255, ../sass/style.scss */
 footer, .push { height: 232px; }
 
-/* line 244, ../sass/style.scss */
+/* line 259, ../sass/style.scss */
 footer { background: #393b3d; }
 
 /*SLIDER front*/
-/* line 250, ../sass/style.scss */
+/* line 265, ../sass/style.scss */
 .jssorb05 { position: absolute; bottom: 85px; right: 6px; }
 
 /*Banner slides*/
-/* line 258, ../sass/style.scss */
-#slider1 .logo-banner { left: 44%; background: url(/images/logo-baner.png) top center no-repeat; background-size: 152px 152px; position: absolute; text-align: center; top: 20%; width: 152px; height: 152px; z-index: 10000; }
-/* line 270, ../sass/style.scss */
+/* line 273, ../sass/style.scss */
+#slider1 .logo-banner { left: 42%; background: url(/images/logo-baner.png) top center no-repeat; background-size: 205px 205px; position: absolute; text-align: center; top: 20%; width: 205px; height: 205px; z-index: 10000; }
+/* line 285, ../sass/style.scss */
 #slider1 .background-layer { left: 0; position: absolute; text-align: center; width: 100%; height: 100%; z-index: 5000; background-color: rgba(0, 0, 0, 0.5); }
-/* line 280, ../sass/style.scss */
+/* line 295, ../sass/style.scss */
 #slider1 h3 { color: #f7f5f1; left: 16%; font-size: 28px; position: absolute; text-align: center; top: 52%; width: 69%; z-index: 10000; }
-/* line 291, ../sass/style.scss */
-#slider1 .go-to-github, #slider1 .read-more { position: absolute; width: 168px; height: 35px; top: 75%; z-index: 10000; line-height: 10px; text-align: center; text-transform: uppercase; font-size: 8px; color: transparent; }
-/* line 304, ../sass/style.scss */
+/* line 306, ../sass/style.scss */
+#slider1 .go-to-github, #slider1 .read-more { position: absolute; width: 196px; height: 44px; top: 71%; z-index: 10000; line-height: 10px; text-align: center; text-transform: uppercase; font-size: 8px; color: transparent; }
+/* line 319, ../sass/style.scss */
 #slider1 .go-to-github:hover, #slider1 .read-more:hover { outline: none; text-decoration: none; }
-/* line 310, ../sass/style.scss */
-#slider1 .go-to-github { left: 35%; background: url(/images/banner-button1.png) top center no-repeat; background-size: 168px 35px; }
-/* line 317, ../sass/style.scss */
-#slider1 .read-more { left: 51%; background: url(/images/banner-button2.png) top center no-repeat; background-size: 168px 35px; }
-/* line 324, ../sass/style.scss */
+/* line 325, ../sass/style.scss */
+#slider1 .go-to-github { left: 35%; background: url(/images/banner-button1.png) top center no-repeat; background-size: 196px 44px; }
+/* line 332, ../sass/style.scss */
+#slider1 .read-more { left: 50%; background: url(/images/banner-button2.png) top center no-repeat; background-size: 196px 44px; }
+/* line 339, ../sass/style.scss */
 #slider1 .go-to-about { left: 49%; background: url(/images/down.png) top center no-repeat; background-size: 15px 10px; text-align: center; position: absolute; width: 15px; height: 10px; top: 95%; z-index: 10000; }
-/* line 335, ../sass/style.scss */
+/* line 350, ../sass/style.scss */
 #slider1 .go-to-about:hover { background: url(/images/down.png) top center no-repeat; background-size: 15px 10px; outline: none; }
 
 /* <!-- Bullet Navigator Skin Begin -->*/
@@ -127,22 +136,22 @@ footer { background: #393b3d; }
 .jssorb05 .av:hover     (active mouseover)
 .jssorb05 .dn           (mousedown)
 */
-/* line 356, ../sass/style.scss */
-.jssorb05 { position: absolute; top: 90%; left: 47%; }
-
-/* line 362, ../sass/style.scss */
-.jssorb05 div, .jssorb05 div:hover, .jssorb05 .av { background: url(/images/b21.png) no-repeat; overflow: hidden; cursor: pointer; }
-
-/* line 369, ../sass/style.scss */
-.jssorb05 div { background-position: -7px -7px; }
-
-/* line 373, ../sass/style.scss */
-.jssorb05 div:hover, .jssorb05 .av:hover { background-position: -37px -7px; }
+/* line 371, ../sass/style.scss */
+.jssorb05 { position: absolute; top: 85%; left: 47%; }
 
 /* line 377, ../sass/style.scss */
+.jssorb05 div, .jssorb05 div:hover, .jssorb05 .av { background: url(/images/b21.png) no-repeat; overflow: hidden; cursor: pointer; }
+
+/* line 384, ../sass/style.scss */
+.jssorb05 div { background-position: -7px -7px; }
+
+/* line 388, ../sass/style.scss */
+.jssorb05 div:hover, .jssorb05 .av:hover { background-position: -37px -7px; }
+
+/* line 392, ../sass/style.scss */
 .jssorb05 .av { background-position: -67px -7px; }
 
-/* line 381, ../sass/style.scss */
+/* line 396, ../sass/style.scss */
 .jssorb05 .dn, .jssorb05 .dn:hover { background-position: -97px -7px; }
 
 /*<!-- Bullet Navigator Skin End -->
@@ -156,37 +165,39 @@ footer { background: #393b3d; }
 .jssora11ldn            (mousedown)
 .jssora11rdn            (mousedown)
 */
-/* line 396, ../sass/style.scss */
+/* line 411, ../sass/style.scss */
 .jssora11l, .jssora11r, .jssora11ldn, .jssora11rdn { position: absolute; cursor: pointer; display: block; background: url(/images/a21.png) no-repeat; overflow: hidden; }
 
-/* line 404, ../sass/style.scss */
+/* line 419, ../sass/style.scss */
 .jssora11l { background-position: -11px -41px; }
 
-/* line 408, ../sass/style.scss */
+/* line 423, ../sass/style.scss */
 .jssora11r { background-position: -71px -41px; }
 
-/* line 412, ../sass/style.scss */
+/* line 427, ../sass/style.scss */
 .jssora11l:hover { background-position: -131px -41px; }
 
-/* line 416, ../sass/style.scss */
+/* line 431, ../sass/style.scss */
 .jssora11r:hover { background-position: -191px -41px; }
 
-/* line 420, ../sass/style.scss */
+/* line 435, ../sass/style.scss */
 .jssora11ldn { background-position: -251px -41px; }
 
-/* line 424, ../sass/style.scss */
+/* line 439, ../sass/style.scss */
 .jssora11rdn { background-position: -311px -41px; }
 
-/* line 428, ../sass/style.scss */
-.people { margin-bottom: 20px; height: 295px; width: 307px; }
-/* line 433, ../sass/style.scss */
+/* line 443, ../sass/style.scss */
+.people { margin-bottom: 40px; height: 315px; width: 307px; }
+/* line 448, ../sass/style.scss */
 .people .text { border: 3px red; cursor: pointer; display: block; }
 
-/* line 440, ../sass/style.scss */
-#join-us { background: #00CE3D; height: 295px; width: 307px; }
-/* line 444, ../sass/style.scss */
-#join-us .center { text-align: center; margin-left: auto; margin-right: auto; margin-top: 170px; margin-bottom: 40px; }
-/* line 451, ../sass/style.scss */
-#join-us .center .button { border: solid #006224 2px; padding: 15px 40px; font-size: 25px; }
-/* line 458, ../sass/style.scss */
+/* line 455, ../sass/style.scss */
+#join-us { background: #00c443 url(/images/join-bg.png) center 10px no-repeat; height: 315px; width: 307px; }
+/* line 459, ../sass/style.scss */
+#join-us .center { text-align: center; margin-left: auto; margin-right: auto; margin-top: 185px; margin-bottom: 40px; }
+/* line 466, ../sass/style.scss */
+#join-us .center .button, #join-us .center .button:hover { border: solid #006224 2px; font-size: 18px; padding: 15px 40px; text-transform: uppercase; text-decoration: none; font-weight: bold; }
+/* line 477, ../sass/style.scss */
 #join-us .text { text-align: center; }
+/* line 480, ../sass/style.scss */
+#join-us p { padding: 0 20px; }
