--- a/css/style.css
+++ b/css/style.css
@@ -28,103 +28,97 @@ a:hover { color: black; }
 /* line 61, ../sass/style.scss */
 h4 small { display: block; font-size: 60%; color: #888; }
 
-/* line 67, ../sass/style.scss */
-footer.container, .container { width: 100%; }
-
-/* line 72, ../sass/style.scss */
+/* line 68, ../sass/style.scss */
 .mainContent { margin: 0 auto; }
-/* line 75, ../sass/style.scss */
+/* line 71, ../sass/style.scss */
 .mainContent h2 { text-align: center; margin: 0 auto; padding-top: 87px; text-transform: uppercase; font-size: 42px; }
-/* line 85, ../sass/style.scss */
+/* line 81, ../sass/style.scss */
 .mainContent .row-fluid .subtext { font-size: 19px; margin: 0 auto; padding: 30px 0; text-align: center; width: 100%; }
-/* line 93, ../sass/style.scss */
+/* line 89, ../sass/style.scss */
 .mainContent .row-fluid .col1, .mainContent .row-fluid .col2, .mainContent .row-fluid .col3 { padding: 120px 20px 20px; background: url("/images/about-bg-0.png") no-repeat top center; margin: 80px 0; text-align: center; text-justify: inter-word; }
-/* line 101, ../sass/style.scss */
+/* line 97, ../sass/style.scss */
 .mainContent .row-fluid .col2 { background: url("/images/about-bg-1.png") no-repeat top center; }
-/* line 105, ../sass/style.scss */
+/* line 101, ../sass/style.scss */
 .mainContent .row-fluid .col3 { background: url("/images/about-bg-2.png") no-repeat top center; }
-/* line 109, ../sass/style.scss */
+/* line 105, ../sass/style.scss */
 .mainContent .row-fluid .col1.help { background: url("/images/help-bg-1.png") no-repeat top center; }
-/* line 113, ../sass/style.scss */
+/* line 109, ../sass/style.scss */
 .mainContent .row-fluid .col2.help { background: url("/images/help-bg-2.png") no-repeat top center; }
-/* line 117, ../sass/style.scss */
+/* line 113, ../sass/style.scss */
 .mainContent .row-fluid .col3.help { background: url("/images/help-bg-3.png") no-repeat top center; }
 
-/* line 125, ../sass/style.scss */
-footer.container { margin-top: 30px; padding: 30px 0; border-top: 1px dashed #aaa; }
-
 /*Header and navbar*/
-/* line 133, ../sass/style.scss */
+/* line 122, ../sass/style.scss */
 .navbar .container-fluid { padding: 0px; margin: 0px; }
 
-/* line 138, ../sass/style.scss */
+/* line 127, ../sass/style.scss */
 .navbar .brand { padding: 0px; margin: 0px; width: 90px; height: 90px; }
 
-/* line 146, ../sass/style.scss */
+/* line 135, ../sass/style.scss */
 .navbar-inverse .navbar-inner { background: #f5f5f5; height: 90px; border: none; }
-/* line 152, ../sass/style.scss */
+/* line 141, ../sass/style.scss */
 .navbar-inverse .navbar-inner .nav-collapse.collapse { float: right; max-width: 950px; }
-/* line 157, ../sass/style.scss */
+/* line 146, ../sass/style.scss */
 .navbar-inverse .navbar-inner .lang { float: right; width: 46px; list-style: none; margin: 0px; padding: 0px; position: relative; right: 14px; }
-/* line 167, ../sass/style.scss */
+/* line 156, ../sass/style.scss */
 .navbar-inverse .navbar-inner .lang > li > a { color: #ff7c18; }
-/* line 172, ../sass/style.scss */
+/* line 161, ../sass/style.scss */
 .navbar-inverse .navbar-inner .social-icon { float: right; width: 120px; list-style: none; margin: 0px; padding: 16px 0px; }
-/* line 181, ../sass/style.scss */
+/* line 170, ../sass/style.scss */
 .navbar-inverse .navbar-inner .social-icon > li { width: 40px; margin: 0px; padding: 0px; overflow: hidden; float: left; display: block; height: 44px; background: url("/images/social-icon.png") no-repeat scroll; }
-/* line 192, ../sass/style.scss */
+/* line 181, ../sass/style.scss */
 .navbar-inverse .navbar-inner .social-icon > li.facebook { background-position: -91px -4px; }
-/* line 196, ../sass/style.scss */
+/* line 185, ../sass/style.scss */
 .navbar-inverse .navbar-inner .social-icon > li.twitter { background-position: -1px -4px; }
-/* line 200, ../sass/style.scss */
+/* line 189, ../sass/style.scss */
 .navbar-inverse .navbar-inner .social-icon > li.google { background-position: -45px -4px; }
-/* line 204, ../sass/style.scss */
+/* line 193, ../sass/style.scss */
 .navbar-inverse .navbar-inner .social-icon > li > a { width: 40px; height: 40px; margin: 0px; padding: 24px 11px; color: transparent; font-size: 3px; overflow: hidden; }
-/* line 213, ../sass/style.scss */
+/* line 202, ../sass/style.scss */
 .navbar-inverse .navbar-inner .btn-navbar { background: url(/images/menu.png); height: 88px; width: 88px; float: right; margin: 0px; padding: 0px; border: none; }
-/* line 223, ../sass/style.scss */
+/* line 212, ../sass/style.scss */
 .navbar-inverse .brand, .navbar-inverse .nav { margin: 0px; padding: 0px; }
 
-/* line 230, ../sass/style.scss */
+/* line 219, ../sass/style.scss */
 .lang > li, .social-icon > li, .navbar-inverse .nav > li { margin-top: 35px; }
 
-/* line 235, ../sass/style.scss */
+/* line 224, ../sass/style.scss */
 .lang > li > a, .social-icon > li > a, .navbar-inverse .nav > li > a { color: #473934; text-transform: uppercase; padding: 0 15px; font-weight: bold; }
 
-/* line 244, ../sass/style.scss */
+/* line 233, ../sass/style.scss */
 html, body { height: 100%; }
 
-/* line 248, ../sass/style.scss */
+/* line 237, ../sass/style.scss */
 .wrapper { min-height: 100%; height: auto !important; /* This line and the next line are not necessary unless you need IE6 support */ height: 100%; margin: 0 auto -155px; /* the bottom margin is the negative value of the footer's height */ }
 
-/* line 255, ../sass/style.scss */
+/* line 244, ../sass/style.scss */
 footer, .push { height: 232px; }
 
-/* line 259, ../sass/style.scss */
+/* line 248, ../sass/style.scss */
 footer { background: #393b3d; }
 
 /*SLIDER front*/
-/* line 265, ../sass/style.scss */
+/* line 254, ../sass/style.scss */
 .jssorb05 { position: absolute; bottom: 85px; right: 6px; }
 
 /*Banner slides*/
-/* line 273, ../sass/style.scss */
+/* line 262, ../sass/style.scss */
 #slider1 .logo-banner { left: 42%; background: url(/images/logo-baner.png) top center no-repeat; background-size: 205px 205px; position: absolute; text-align: center; top: 20%; width: 205px; height: 205px; z-index: 10000; }
-/* line 285, ../sass/style.scss */
+/* line 274, ../sass/style.scss */
 #slider1 .background-layer { left: 0; position: absolute; text-align: center; width: 100%; height: 100%; z-index: 5000; background-color: rgba(0, 0, 0, 0.5); }
-/* line 295, ../sass/style.scss */
+/* line 284, ../sass/style.scss */
 #slider1 h3 { color: #f7f5f1; left: 16%; font-size: 28px; position: absolute; text-align: center; top: 52%; width: 69%; z-index: 10000; }
-/* line 306, ../sass/style.scss */
+/* line 295, ../sass/style.scss */
 #slider1 .go-to-github, #slider1 .read-more { position: absolute; width: 196px; height: 44px; top: 71%; z-index: 10000; line-height: 10px; text-align: center; text-transform: uppercase; font-size: 8px; color: transparent; }
-/* line 319, ../sass/style.scss */
+/* line 308, ../sass/style.scss */
 #slider1 .go-to-github:hover, #slider1 .read-more:hover { outline: none; text-decoration: none; }
-/* line 325, ../sass/style.scss */
+/* line 314, ../sass/style.scss */
 #slider1 .go-to-github { left: 35%; background: url(/images/banner-button1.png) top center no-repeat; background-size: 196px 44px; }
-/* line 332, ../sass/style.scss */
+/* line 321, ../sass/style.scss */
 #slider1 .read-more { left: 50%; background: url(/images/banner-button2.png) top center no-repeat; background-size: 196px 44px; }
-/* line 339, ../sass/style.scss */
+/* line 328, ../sass/style.scss */
 #slider1 .go-to-about { left: 49%; background: url(/images/down.png) top center no-repeat; background-size: 15px 10px; text-align: center; position: absolute; width: 15px; height: 10px; top: 95%; z-index: 10000; }
-/* line 350, ../sass/style.scss */
+/* line 339, ../sass/style.scss */
 #slider1 .go-to-about:hover { background: url(/images/down.png) top center no-repeat; background-size: 15px 10px; outline: none; }
 
 /* <!-- Bullet Navigator Skin Begin -->*/
@@ -136,22 +130,22 @@ footer { background: #393b3d; }
 .jssorb05 .av:hover     (active mouseover)
 .jssorb05 .dn           (mousedown)
 */
-/* line 371, ../sass/style.scss */
+/* line 360, ../sass/style.scss */
 .jssorb05 { position: absolute; top: 85%; left: 47%; }
 
-/* line 377, ../sass/style.scss */
+/* line 366, ../sass/style.scss */
 .jssorb05 div, .jssorb05 div:hover, .jssorb05 .av { background: url(/images/b21.png) no-repeat; overflow: hidden; cursor: pointer; }
 
-/* line 384, ../sass/style.scss */
+/* line 373, ../sass/style.scss */
 .jssorb05 div { background-position: -7px -7px; }
 
-/* line 388, ../sass/style.scss */
+/* line 377, ../sass/style.scss */
 .jssorb05 div:hover, .jssorb05 .av:hover { background-position: -37px -7px; }
 
-/* line 392, ../sass/style.scss */
+/* line 381, ../sass/style.scss */
 .jssorb05 .av { background-position: -67px -7px; }
 
-/* line 396, ../sass/style.scss */
+/* line 385, ../sass/style.scss */
 .jssorb05 .dn, .jssorb05 .dn:hover { background-position: -97px -7px; }
 
 /*<!-- Bullet Navigator Skin End -->
@@ -165,42 +159,66 @@ footer { background: #393b3d; }
 .jssora11ldn            (mousedown)
 .jssora11rdn            (mousedown)
 */
-/* line 411, ../sass/style.scss */
+/* line 400, ../sass/style.scss */
 .jssora11l, .jssora11r, .jssora11ldn, .jssora11rdn { position: absolute; cursor: pointer; display: block; background: url(/images/a21.png) no-repeat; overflow: hidden; }
 
-/* line 419, ../sass/style.scss */
+/* line 408, ../sass/style.scss */
 .jssora11l { background-position: -11px -41px; }
 
-/* line 423, ../sass/style.scss */
+/* line 412, ../sass/style.scss */
 .jssora11r { background-position: -71px -41px; }
 
-/* line 427, ../sass/style.scss */
+/* line 416, ../sass/style.scss */
 .jssora11l:hover { background-position: -131px -41px; }
 
-/* line 431, ../sass/style.scss */
+/* line 420, ../sass/style.scss */
 .jssora11r:hover { background-position: -191px -41px; }
 
-/* line 435, ../sass/style.scss */
+/* line 424, ../sass/style.scss */
 .jssora11ldn { background-position: -251px -41px; }
 
-/* line 439, ../sass/style.scss */
+/* line 428, ../sass/style.scss */
 .jssora11rdn { background-position: -311px -41px; }
 
-/* line 443, ../sass/style.scss */
+/* line 432, ../sass/style.scss */
 .people { margin-bottom: 40px; height: 315px; width: 307px; }
-/* line 448, ../sass/style.scss */
+/* line 437, ../sass/style.scss */
 .people .text { border: 3px red; cursor: pointer; display: block; }
 
-/* line 455, ../sass/style.scss */
+/* line 444, ../sass/style.scss */
 .team-list { margin-top: 50px; }
 
-/* line 459, ../sass/style.scss */
+/* line 448, ../sass/style.scss */
 #join-us { background: #00c443 url(/images/join-bg.png) center 10px no-repeat; height: 315px; width: 307px; }
-/* line 463, ../sass/style.scss */
+/* line 452, ../sass/style.scss */
 #join-us .center { text-align: center; margin-left: auto; margin-right: auto; margin-top: 185px; margin-bottom: 40px; }
-/* line 470, ../sass/style.scss */
+/* line 459, ../sass/style.scss */
 #join-us .center .button, #join-us .center .button:hover { border: solid #006224 2px; font-size: 18px; padding: 15px 40px; text-transform: uppercase; text-decoration: none; font-weight: bold; }
-/* line 481, ../sass/style.scss */
+/* line 470, ../sass/style.scss */
 #join-us .text { text-align: center; }
-/* line 484, ../sass/style.scss */
+/* line 473, ../sass/style.scss */
 #join-us p { padding: 0 20px; }
+
+/* line 479, ../sass/style.scss */
+footer.container, .container { width: 100%; }
+
+/* line 484, ../sass/style.scss */
+footer.container { margin-top: 30px; padding: 30px 0; border-top: 1px dashed #aaa; color: #f7f5f1; }
+/* line 490, ../sass/style.scss */
+footer.container .copy { padding-top: 232px; float: left; }
+/* line 495, ../sass/style.scss */
+footer.container aside { float: right; margin: 50px 0 0 0; }
+/* line 499, ../sass/style.scss */
+footer.container aside h2 { color: #f7f5f1; font-size: 33px; line-height: 30px; margin: 40px 0; text-transform: uppercase; }
+/* line 506, ../sass/style.scss */
+footer.container aside ul.sovial-icon { list-style: none; margin: 0px; padding: 0px; }
+/* line 510, ../sass/style.scss */
+footer.container aside ul.sovial-icon li { height: 100px; padding: 0 4px; background: url(/images/social-icon-footer.png) center top no-repeat; }
+/* line 514, ../sass/style.scss */
+footer.container aside ul.sovial-icon li a { color: transparent; padding: 10px 10px 80px; }
+/* line 519, ../sass/style.scss */
+footer.container aside ul.sovial-icon .facebook { background-position: -177px 0; }
+/* line 522, ../sass/style.scss */
+footer.container aside ul.sovial-icon .twitter { background-position: -8px 0; }
+/* line 525, ../sass/style.scss */
+footer.container aside ul.sovial-icon .google { background-position: -97px 0; }
