--- a/css/style.css
+++ b/css/style.css
@@ -226,45 +226,69 @@ footer { background: #393b3d; }
 .team-wrapper, .team, .team-list { background: #f5f5f5; }
 
 /* line 596, ../sass/style.scss */
-.people { margin-bottom: 40px; height: 315px; width: 307px; background: white; }
+.people { margin-bottom: 40px; height: 354px; width: 307px; background: white; }
 /* line 602, ../sass/style.scss */
-.people .text { border: 3px red; cursor: pointer; display: block; font-size: 12px; line-height: 18px; }
+.people .dziubek { background: url("/images/dziubek.png") no-repeat center top; width: 15px; height: 7px; display: block; }
+/* line 609, ../sass/style.scss */
+.people.piotrek { background: url("/images/people/piotrek.jpg") no-repeat top left white; }
+/* line 613, ../sass/style.scss */
+.people.marzena { background: url("/images/people/marzena.jpg") no-repeat top left white; }
+/* line 617, ../sass/style.scss */
+.people.karol { background: url("/images/people/karol.jpg") no-repeat top left white; }
+/* line 621, ../sass/style.scss */
+.people.jarek { background: url("/images/people/jarek.jpg") no-repeat top left white; }
+/* line 625, ../sass/style.scss */
+.people.tomek { background: url("/images/people/tomek.jpg") no-repeat top left white; }
+/* line 629, ../sass/style.scss */
+.people .text { background: white; cursor: pointer; display: block; font-size: 12px; line-height: 18px; height: 311px; padding: 7px 15px; position: relative; top: 30px; }
+/* line 640, ../sass/style.scss */
+.people .text .dziubek { left: 64px; position: relative; top: -14px; }
+/* line 647, ../sass/style.scss */
+.people .image { overflow: hidden; }
+/* line 650, ../sass/style.scss */
+.people .image img { width: 307px; max-width: 307px; }
+/* line 655, ../sass/style.scss */
+.people .image h4 { padding: 7px 15px 15px 15px; }
+/* line 659, ../sass/style.scss */
+.people .image .dziubek { left: 64px; position: relative; top: -7px; }
 
-/* line 611, ../sass/style.scss */
+/* line 668, ../sass/style.scss */
 .team-list { margin-top: 50px; }
 
-/* line 615, ../sass/style.scss */
-#join-us { background: #00c443 url(/images/join-bg.png) center 10px no-repeat; height: 315px; width: 307px; }
-/* line 619, ../sass/style.scss */
-#join-us .center { text-align: center; margin-left: auto; margin-right: auto; margin-top: 185px; margin-bottom: 40px; }
-/* line 626, ../sass/style.scss */
-#join-us .center .button, #join-us .center .button:hover { border: solid #006224 2px; font-size: 18px; padding: 15px 40px; text-transform: uppercase; text-decoration: none; font-weight: bold; }
-/* line 637, ../sass/style.scss */
+/* line 672, ../sass/style.scss */
+#join-us { background: #00c443 url(/images/join-bg.png) center 29px no-repeat; height: 354px; width: 307px; }
+/* line 676, ../sass/style.scss */
+#join-us .center { text-align: center; margin-left: auto; margin-right: auto; margin-top: 210px; margin-bottom: 40px; }
+/* line 683, ../sass/style.scss */
+#join-us .center .button { border: solid #006224 2px; font-size: 18px; padding: 15px 40px; text-transform: uppercase; text-decoration: none; font-weight: bold; }
+/* line 692, ../sass/style.scss */
+#join-us .center .button:hover { border: solid #006224 2px; color: #00c443; background: #006224; }
+/* line 700, ../sass/style.scss */
 #join-us .text { text-align: center; }
-/* line 640, ../sass/style.scss */
+/* line 703, ../sass/style.scss */
 #join-us p { padding: 0 20px; }
 
 /*FOOTER*/
-/* line 646, ../sass/style.scss */
+/* line 709, ../sass/style.scss */
 footer.container, .container { width: 100%; }
 
-/* line 651, ../sass/style.scss */
+/* line 714, ../sass/style.scss */
 footer.container { padding: 30px 0; border-top: 1px dashed #aaa; color: #f7f5f1; }
-/* line 656, ../sass/style.scss */
+/* line 719, ../sass/style.scss */
 footer.container .copy { padding-top: 232px; float: left; }
-/* line 661, ../sass/style.scss */
+/* line 724, ../sass/style.scss */
 footer.container aside { float: right; margin: 50px 0 0 0; }
-/* line 665, ../sass/style.scss */
+/* line 728, ../sass/style.scss */
 footer.container aside h2 { color: #f7f5f1; font-size: 60px; line-height: 30px; margin: 40px 0; text-transform: uppercase; }
-/* line 672, ../sass/style.scss */
+/* line 735, ../sass/style.scss */
 footer.container aside ul.sovial-icon { list-style: none; margin: 0px; padding: 0px; }
-/* line 676, ../sass/style.scss */
+/* line 739, ../sass/style.scss */
 footer.container aside ul.sovial-icon li { height: 100px; padding: 0 4px; background: url(/images/social-icon-footer.png) center top no-repeat; }
-/* line 680, ../sass/style.scss */
+/* line 743, ../sass/style.scss */
 footer.container aside ul.sovial-icon li a { color: transparent; padding: 10px 10px 80px; }
-/* line 685, ../sass/style.scss */
+/* line 748, ../sass/style.scss */
 footer.container aside ul.sovial-icon .facebook { background-position: -177px 0; }
-/* line 688, ../sass/style.scss */
+/* line 751, ../sass/style.scss */
 footer.container aside ul.sovial-icon .twitter { background-position: -8px 0; }
-/* line 691, ../sass/style.scss */
+/* line 754, ../sass/style.scss */
 footer.container aside ul.sovial-icon .google { background-position: -97px 0; }
